// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / FlexTable / With different columns Column Width Sortable Table 1`] = `
.c34 {
  height: 20px;
  box-sizing: border-box;
  display: block;
  width: 26.666666666666668px;
  overflow: hidden;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  box-sizing: border-box;
}

.c19 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 0 15%;
  -ms-flex: 0 15%;
  flex: 0 15%;
}

.c20 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 0 100px;
  -ms-flex: 0 100px;
  flex: 0 100px;
}

.c21 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c33 {
  box-sizing: border-box;
}

.c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #6E6E69;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c30 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c31 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c32 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c25 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c29 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c27 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c27,
.c27[type='button'],
.c27[type='reset'],
.c27[type='submit'] {
  -webkit-appearance: button;
}

.c27::-moz-focus-inner,
.c27[type='button']::-moz-focus-inner,
.c27[type='reset']::-moz-focus-inner,
.c27[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c27:-moz-focusring,
.c27[type='button']:-moz-focusring,
.c27[type='reset']:-moz-focusring,
.c27[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 0;
}

.c14 {
  width: inherit;
}

.c16 {
  font-size: 14px;
  line-height: 20px;
}

.c24 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c28 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c28:focus {
  outline: none;
}

.c26 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c22 {
  display: none;
}

.c4 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:nth-last-child(2) {
  padding-right: 0;
}

.c23 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c23:hover {
  background: #F5F5F5;
}

.c23 > *:first-child {
  padding-left: 0;
}

.c23 > *:nth-last-child(2) {
  padding-right: 0;
}

.c5 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c18 {
  margin-left: 4px;
}

.c8 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  width: 100%;
}

.c10 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
}

.c7 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {

}

@media not all and (min-width:976px) {

}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Sortable Table With Column Width Set
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        aria-sort="none"
        className="c6 c7"
        role="columnheader"
      >
        <a
          className="c8"
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <div
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13 c14"
              >
                <span
                  className="c15 c16"
                >
                  Flex 1
                </span>
              </div>
            </div>
            <div
              className="c11"
            >
              <svg
                aria-hidden="true"
                className="c17 c18"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
      <div
        aria-sort="none"
        className="c19 c7"
        role="columnheader"
      >
        <a
          className="c8"
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <div
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13 c14"
              >
                <span
                  className="c15 c16"
                >
                  Fifteen percent
                </span>
              </div>
            </div>
            <div
              className="c11"
            >
              <svg
                aria-hidden="true"
                className="c17 c18"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
      <div
        aria-sort="none"
        className="c20 c7"
        role="columnheader"
      >
        <a
          className="c8"
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <div
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13 c14"
              >
                <span
                  className="c15 c16"
                >
                  Loooooooooooooong header set width
                </span>
              </div>
            </div>
            <div
              className="c11"
            >
              <svg
                aria-hidden="true"
                className="c17 c18"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
      <div
        aria-sort="none"
        className="c6 c7"
        role="columnheader"
      >
        <a
          className="c8"
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <div
            className="c9 c10"
          >
            <div
              className="c11 c12"
            >
              <div
                className="c13 c14"
              >
                <span
                  className="c15 c16"
                >
                  Default
                </span>
              </div>
            </div>
            <div
              className="c11"
            >
              <svg
                aria-hidden="true"
                className="c17 c18"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
      <div
        className="c21 c7 c22"
        role="columnheader"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c15 c16"
          />
        </div>
      </div>
    </div>
    <div
      className="c3 c23"
      role="row"
    >
      <div
        className="c6 c24"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c25 c16"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c19 c24"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c25 c16"
          >
            Very long cell content that should be truncated or ellipsized depepending on your language preferences
          </span>
        </div>
      </div>
      <div
        className="c20 c24"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c25 c16"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c6 c24"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c25 c16"
          >
            Cell 1-4
          </span>
        </div>
      </div>
      <div
        className="c21 c24 c26 c22"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c27 c28"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c29"
          >
            <svg
              aria-hidden="true"
              className="c30"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c27 c28"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c29"
          >
            <svg
              aria-hidden="true"
              className="c31 c32"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c3 c23"
      role="row"
    >
      <div
        className="c6 c24"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c25 c16"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c19 c24"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c25 c16"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c20 c24"
        role="cell"
      >
        <div
          className="c33 c12"
        >
          <div
            className="c13 c14"
          >
            <span
              className="c25 c16"
            >
              Long cell with flag
            </span>
          </div>
          <svg
            className="c34"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <g
              transform="translate(50.082) scale(.9375)"
            >
              <g
                fillRule="evenodd"
                strokeWidth="1pt"
              >
                <path
                  d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                  fill="#006aa7"
                />
                <path
                  d="M-121.103 204.984h256v102.4h-256z"
                  fill="#fecc00"
                />
                <path
                  d="M133.843.01h102.4v511.997h-102.4z"
                  fill="#fecc00"
                />
                <path
                  d="M232.995 205.013h460.798v102.4H232.995z"
                  fill="#fecc00"
                />
                <path
                  d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                  fill="#006aa7"
                />
              </g>
            </g>
            <title>
              Sweden
            </title>
          </svg>
        </div>
      </div>
      <div
        className="c6 c24"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c25 c16"
          >
            Cell 2-4
          </span>
        </div>
      </div>
      <div
        className="c21 c24 c26 c22"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c27 c28"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c29"
          >
            <svg
              aria-hidden="true"
              className="c30"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c27 c28"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c29"
          >
            <svg
              aria-hidden="true"
              className="c31 c32"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c3 c23"
      role="row"
    >
      <div
        className="c6 c24"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c25 c16"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c19 c24"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c25 c16"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c20 c24"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c25 c16"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c6 c24"
        role="cell"
      >
        <div
          className="c13 c14"
        >
          <span
            className="c25 c16"
          >
            Cell 3-4
          </span>
        </div>
      </div>
      <div
        className="c21 c24 c26 c22"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c27 c28"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c29"
          >
            <svg
              aria-hidden="true"
              className="c30"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c27 c28"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c29"
          >
            <svg
              aria-hidden="true"
              className="c31 c32"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With different columns Column Width Table With Custom Flag Cell 1`] = `
.c28 {
  height: 20px;
  box-sizing: border-box;
  display: block;
  width: 26.666666666666668px;
  overflow: hidden;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 0 15%;
  -ms-flex: 0 15%;
  flex: 0 15%;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 0 100px;
  -ms-flex: 0 100px;
  flex: 0 100px;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c26 {
  box-sizing: border-box;
}

.c23 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c24 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c25 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c22 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c20 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c20,
.c20[type='button'],
.c20[type='reset'],
.c20[type='submit'] {
  -webkit-appearance: button;
}

.c20::-moz-focus-inner,
.c20[type='button']::-moz-focus-inner,
.c20[type='reset']::-moz-focus-inner,
.c20[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c20:-moz-focusring,
.c20[type='button']:-moz-focusring,
.c20[type='reset']:-moz-focusring,
.c20[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c27 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 0;
}

.c9 {
  width: inherit;
}

.c11 {
  font-size: 14px;
  line-height: 20px;
}

.c17 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c21 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c21:focus {
  outline: none;
}

.c19 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c15 {
  display: none;
}

.c4 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:nth-last-child(2) {
  padding-right: 0;
}

.c16 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c16:hover {
  background: #F5F5F5;
}

.c16 > *:first-child {
  padding-left: 0;
}

.c16 > *:nth-last-child(2) {
  padding-right: 0;
}

.c5 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c7 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {

}

@media not all and (min-width:976px) {

}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Table With Different Widths and Custom Flag Cell
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Flex 1
          </span>
        </div>
      </div>
      <div
        className="c12 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Fifteen percent
          </span>
        </div>
      </div>
      <div
        className="c13 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Loooooooooooooong header set width
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c14 c7 c15"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          />
        </div>
      </div>
    </div>
    <div
      className="c3 c16"
      role="row"
    >
      <div
        className="c6 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Very long cell content that should be truncated or ellipsized depepending on your language preferences
          </span>
        </div>
      </div>
      <div
        className="c13 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c6 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 1-4
          </span>
        </div>
      </div>
      <div
        className="c14 c17 c19 c15"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c20 c21"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c22"
          >
            <svg
              aria-hidden="true"
              className="c23"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c20 c21"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c22"
          >
            <svg
              aria-hidden="true"
              className="c24 c25"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c3 c16"
      role="row"
    >
      <div
        className="c6 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c13 c17"
        role="cell"
      >
        <div
          className="c26 c27"
        >
          <div
            className="c8 c9"
          >
            <span
              className="c18 c11"
            >
              Long cell with flag
            </span>
          </div>
          <svg
            className="c28"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <g
              transform="translate(50.082) scale(.9375)"
            >
              <g
                fillRule="evenodd"
                strokeWidth="1pt"
              >
                <path
                  d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                  fill="#006aa7"
                />
                <path
                  d="M-121.103 204.984h256v102.4h-256z"
                  fill="#fecc00"
                />
                <path
                  d="M133.843.01h102.4v511.997h-102.4z"
                  fill="#fecc00"
                />
                <path
                  d="M232.995 205.013h460.798v102.4H232.995z"
                  fill="#fecc00"
                />
                <path
                  d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                  fill="#006aa7"
                />
              </g>
            </g>
            <title>
              Sweden
            </title>
          </svg>
        </div>
      </div>
      <div
        className="c6 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 2-4
          </span>
        </div>
      </div>
      <div
        className="c14 c17 c19 c15"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c20 c21"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c22"
          >
            <svg
              aria-hidden="true"
              className="c23"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c20 c21"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c22"
          >
            <svg
              aria-hidden="true"
              className="c24 c25"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c3 c16"
      role="row"
    >
      <div
        className="c6 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c13 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c6 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 3-4
          </span>
        </div>
      </div>
      <div
        className="c14 c17 c19 c15"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c20 c21"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c22"
          >
            <svg
              aria-hidden="true"
              className="c23"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c20 c21"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c22"
          >
            <svg
              aria-hidden="true"
              className="c24 c25"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With different columns Different Alignments Table 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c23 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c24 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c25 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c22 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c20 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c20,
.c20[type='button'],
.c20[type='reset'],
.c20[type='submit'] {
  -webkit-appearance: button;
}

.c20::-moz-focus-inner,
.c20[type='button']::-moz-focus-inner,
.c20[type='reset']::-moz-focus-inner,
.c20[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c20:-moz-focusring,
.c20[type='button']:-moz-focusring,
.c20[type='reset']:-moz-focusring,
.c20[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  width: inherit;
}

.c11 {
  font-size: 14px;
  line-height: 20px;
}

.c17 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c21 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c21:focus {
  outline: none;
}

.c19 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c15 {
  display: none;
}

.c4 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:nth-last-child(2) {
  padding-right: 0;
}

.c16 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c16:hover {
  background: #F5F5F5;
}

.c16 > *:first-child {
  padding-left: 0;
}

.c16 > *:nth-last-child(2) {
  padding-right: 0;
}

.c5 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c7 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media not all and (max-width:975px) {

}

@media not all and (min-width:976px) {

}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Table With Different Alignments
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Left
          </span>
        </div>
      </div>
      <div
        className="c12 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Right
          </span>
        </div>
      </div>
      <div
        className="c12 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Right
          </span>
        </div>
      </div>
      <div
        className="c13 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Center
          </span>
        </div>
      </div>
      <div
        className="c14 c7 c15"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          />
        </div>
      </div>
    </div>
    <div
      className="c3 c16"
      role="row"
    >
      <div
        className="c6 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c13 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 1-4
          </span>
        </div>
      </div>
      <div
        className="c14 c17 c19 c15"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c20 c21"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c22"
          >
            <svg
              aria-hidden="true"
              className="c23"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c20 c21"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c22"
          >
            <svg
              aria-hidden="true"
              className="c24 c25"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c3 c16"
      role="row"
    >
      <div
        className="c6 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c13 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 2-4
          </span>
        </div>
      </div>
      <div
        className="c14 c17 c19 c15"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c20 c21"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c22"
          >
            <svg
              aria-hidden="true"
              className="c23"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c20 c21"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c22"
          >
            <svg
              aria-hidden="true"
              className="c24 c25"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c3 c16"
      role="row"
    >
      <div
        className="c6 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c13 c17"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c18 c11"
          >
            Cell 3-4
          </span>
        </div>
      </div>
      <div
        className="c14 c17 c19 c15"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c20 c21"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c22"
          >
            <svg
              aria-hidden="true"
              className="c23"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c20 c21"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c22"
          >
            <svg
              aria-hidden="true"
              className="c24 c25"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / FlexTable / With different columns Hidden Column On Xs And Sm Screens 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: none;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: none;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c24 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c21 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c19 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c19,
.c19[type='button'],
.c19[type='reset'],
.c19[type='submit'] {
  -webkit-appearance: button;
}

.c19::-moz-focus-inner,
.c19[type='button']::-moz-focus-inner,
.c19[type='reset']::-moz-focus-inner,
.c19[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c19:-moz-focusring,
.c19[type='button']:-moz-focusring,
.c19[type='reset']:-moz-focusring,
.c19[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  width: inherit;
}

.c11 {
  font-size: 14px;
  line-height: 20px;
}

.c16 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c20 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c20:focus {
  outline: none;
}

.c18 {
  padding-top: 0 !important;
  padding-bottom: 0;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c14 {
  display: none;
}

.c4 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:nth-last-child(2) {
  padding-right: 0;
}

.c15 {
  background: #FFFFFF;
  margin-right: 0;
  margin-left: 0;
  cursor: auto;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  border-bottom: 1px solid #EBEBE8;
}

.c15:hover {
  background: #F5F5F5;
}

.c15 > *:first-child {
  padding-left: 0;
}

.c15 > *:nth-last-child(2) {
  padding-right: 0;
}

.c5 {
  border-bottom: 1px solid #282823;
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.c7 {
  overflow: hidden;
  padding-top: 4px !important;
  padding-bottom: 4px;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:1280px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (min-width:976px) {
  .c12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media not all and (max-width:975px) {

}

@media not all and (min-width:976px) {

}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Hidden Column On Extra Small And Small Screens
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c12 c7"
        hidden={true}
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Hidden on xs and sm
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c13 c7 c14"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10 c11"
          />
        </div>
      </div>
    </div>
    <div
      className="c3 c15"
      role="row"
    >
      <div
        className="c6 c16"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c12 c16"
        hidden={true}
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Hidden on xs and sm
          </span>
        </div>
      </div>
      <div
        className="c6 c16"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c13 c16 c18 c14"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c23 c24"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c3 c15"
      role="row"
    >
      <div
        className="c6 c16"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c12 c16"
        hidden={true}
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Hidden on xs and sm
          </span>
        </div>
      </div>
      <div
        className="c6 c16"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c13 c16 c18 c14"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c23 c24"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c3 c15"
      role="row"
    >
      <div
        className="c6 c16"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c12 c16"
        hidden={true}
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Hidden on xs and sm
          </span>
        </div>
      </div>
      <div
        className="c6 c16"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c17 c11"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c13 c16 c18 c14"
        role="cell"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c22"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c19 c20"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c21"
          >
            <svg
              aria-hidden="true"
              className="c23 c24"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
